# doors

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  pycodestyle.cfg  style.sh
.circleci/: config.yml
comulator/: Benchmark.cpp  Benchmark.h  BenchmarkHandler.cpp  BenchmarkHandler.h  CMakeLists.txt  LockTask.cpp  LockTask.h  LockTaskHandler.cpp  LockTaskHandler.h  UnlockTask.cpp  UnlockTask.h  UnlockTaskHandler.cpp  UnlockTaskHandler.h  main.cpp
core/: Action.h  AsioHttpService.cpp  AsioHttpService.h  AsioScheduler.cpp  AsioScheduler.h  AsioSocket.cpp  AsioUdpService.cpp  AsioUdpService.h  BootstrapTask.cpp  BootstrapTask.h  Bytes.h  BytesInventory.cpp  BytesInventory.h  BytesLock.cpp  BytesLock.h  BytesOk.cpp  BytesOk.h  BytesUnlock.cpp  BytesUnlock.h  CMakeLists.txt  ChainBytes.cpp  ChainBytes.h  ConfigBytes.cpp  ConfigBytes.h  DefaultStorage.cpp  DefaultStorage.h  DispatchedAction.cpp  DispatchedAction.h  ErrorBytes.cpp  ErrorBytes.h  HttpService.h  HttpStorage.cpp  HttpStorage.h  IdentBytes.cpp  IdentBytes.h  ImmediatlyScheduler.cpp  ImmediatlyScheduler.h  InventoryAction.cpp  InventoryAction.h  InventoryBytes.cpp  (+44 more)
include/: Protocol.h  protocol.h
server/: Action.h  AsioSocket.h  CMakeLists.txt  Listener.cpp  Listener.h  Socket.h  StatusAction.cpp  main.cpp
server.core/: Action.h  CMakeLists.txt  DefaultStorage.h  DispatchedAction.cpp  DispatchedAction.h  ImmediatlyScheduler.h  StatusAction.cpp  StatusAction.h  StatusTask.cpp  StatusTask.h  Storage.h
server.test/: ActionRepr.h  BytesRepr.h  CMakeLists.txt  ChainBytesTest.cpp  DispatchedActionTest.cpp  DispatchedActionTest.h  InventoryActionTest.cpp  InventoryActionTest.h  InventoryBytesTest.h  List32BytesTest.cpp  List32BytesTest.h  SaboteurStorage.h  StatusActionTest.cpp  StatusActionTest.h  TestAction.cpp  TestAction.h  TestSocket.cpp  TestSocket.h  TestStorage.cpp  TestStorage.h  test.cpp
test/: ActionRepr.cpp  ActionRepr.h  BootstrapTaskTest.cpp  BootstrapTaskTest.h  BytesRepr.cpp  CMakeLists.txt  ChainBytesTest.h  ConfigBytesTest.cpp  ConfigBytesTest.h  DispatchedActionTest.cpp  IdentBytesTest.cpp  IdentBytesTest.h  InventoryActionTest.cpp  InventoryBytesTest.cpp  InventoryTaskTest.cpp  InventoryTaskTest.h  KeyStatusBytesTest.cpp  KeyStatusBytesTest.h  List64BytesTest.cpp  List64BytesTest.h  LockBytesTest.cpp  LockBytesTest.h  LogIoService.cpp  LogIoService.h  LogStorage.cpp  LogStorage.h  LogUdpService.cpp  LogUdpService.h  RawBytesTest.cpp  RawBytesTest.h  SaboteurStorage.cpp  SaboteurStorage.h  StatusActionTest.cpp  TestAction.cpp  TestAction.h  TestIoService.cpp  TestIoService.h  TestSocket.h  TestStorage.cpp  TestStorage.h  (+3 more)
util/: CMakeLists.txt  main.cpp
web/: CMakeLists.txt
web/doors/: __init__.py  admin.py  apps.py  models.py  views.py
web/doors/migrations/: 0001_initial.py  0002_lock.py  0003_lock_open.py
web/doors/static/: controller.xsl  controllers.xsl  lock.xsl
web/doors/templates/: controller.xml  controllers.json  controllers.xml  lock.xml
web/doors/tests/: testControllerView.py  testControllers.py  testIndex.py  testLocks.py
web/web/: settings.py  test_settings.py  urls.py
