CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(Threads)

INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

ENABLE_TESTING()

ADD_CUSTOM_TARGET(
	style
	COMMAND ${CMAKE_SOURCE_DIR}/style.sh
	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
)

INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(.)

ADD_SUBDIRECTORY(server)
ADD_SUBDIRECTORY(server.test)
ADD_SUBDIRECTORY(comulator)
ADD_SUBDIRECTORY(util)
